--- a/AI-Video-Stack.Server/appsettings.json
+++ b/AI-Video-Stack.Server/appsettings.json
@@ -5,26 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    
-      "Ollama": {
-        "BaseUrl": "http://localhost:11434/",
-        "Model": "llama3"
-      },
-  "TtsService": {
-    "BaseUrl": "http://localhost:8000/",
-    "Endpoint": "narrate"
-  },
-  "Shotstack": {
-    "BaseUrl": "https://api.shotstack.io/stage/",
-    "Stage": true,
-    "ApiKey": "wG3Yt0Lo7W6ZrGg7DtEGNHGA4XMZzcxA7VMygplr"
-  },
-      "StaticAssets": {
-        "PublicOrigin": "https://localhost:5001/",
-        "AssetsPath": "Assets"
-      },
-    
+  "Github": {
+    "Owner": "pinkybhupendrashahh", // your GitHub username/org
+    "Repo": "AI-Video-Stack", // public repo with Pages enabled 
+    "Branch": "master",
+    "AssetsFolder": "assets",
+    "CommitterName": "AI Video Bot",
+    "CommitterEmail": "bot@example.com"
+             },
 
-  
-  "AllowedHosts": "*"
-}
+    "Ollama": {
+      "BaseUrl": "http://localhost:11434/",
+      "Model": "llama3"
+    },
+    "TtsService": {
+      "BaseUrl": "http://localhost:8000/",
+      "Endpoint": "narrate"
+    },
+    "Shotstack": {
+      "BaseUrl": "https://api.shotstack.io/stage/",
+      "Stage": true,
+      },
+    "StaticAssets": {
+      "PublicOrigin": "https://localhost:5001/",
+      "AssetsPath": "Assets"
+    },
+     "AllowedHosts": "*"
+  }
